--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src='auxilary/buzz.js'></script>
   <script src='game.js'></script>
   <script src='main.js'></script>
+  <script src='Meteor.js'></script>
   <script src="auxilary/sprite.js"></script>
 
   <style>
