--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <script src='game.js'></script>
   <script src='main.js'></script>
   <script src='Meteor.js'></script>
+  <script src='Player.js'></script>
   <script src="auxilary/sprite.js"></script>
 
   <style>
