--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <script src='main.js'></script>
   <script src='Meteor.js'></script>
   <script src='Player.js'></script>
+  <script src='StaticGraphics.js'></script>
   <script src="auxilary/sprite.js"></script>
 
   <style>
